# EntitySimulation

./: CMakeLists.txt  README.md
docs/: life_steps.drawio  mindmap.html
src/: main.cpp
